# mission-control-api

./: .env.example  .gitignore  FRONTEND_INTEGRATION.md  README.md  cover.html  ecosystem.config.cjs  pyproject.toml  ssh_exec.py  start.sh
docs/architecture/: BACKEND.md
src/mission_control_api/: __init__.py  __main__.py  agents.py  citation_validator.py  config.py  event_engine.py  infrastructure_client.py  llm_client.py  main.py  mission_memory.py  models.py  orchestrator.py  population_client.py  runtime.py  usgs_client.py  weather_client.py
src/mission_control_api/prompts/: __init__.py  aegis.txt  atlas.txt  overwatch.txt  overwatch_synthesize.txt  pulse.txt  sentinel.txt
tests/: test_api_e2e.py  test_architecture_contract.py  test_config.py  test_llm_wiring.py
